2008-12-04  Glenn Morris  <rgm@gnu.org>

	* vc-cvs.el (vc-cvs-register-switches): Doc fix.  Add t as option.
	(vc-cvs-register): Doc fix.
	* vc-mcvs.el (vc-mcvs-register-switches): Doc fix.  Add t as option.
	(vc-mcvs-register): Doc fix.
	* vc-rcs.el (vc-rcs-register-switches): Doc fix.  Add t as option.
	(vc-rcs-register): Doc fix.
	* vc-sccs.el (vc-sccs-register-switches): Doc fix.  Add t as option.
	(vc-sccs-register): Doc fix.
	* vc-svn.el (vc-svn-register-switches): Doc fix.  Add t as option.
	(vc-svn-register): Doc fix.

	* files.el (toggle-read-only): Doc fix.

2008-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* apropos.el (apropos-print-doc): Fix thinko that caused long labels to
	be used in compact layout and vice-versa.

2008-12-03  Juanma Barranquero  <lekktu@gmail.com>

	* w32-fns.el (w32-list-locales): Use `with-output-to-temp-buffer',
	like most list-* commands.

	* international/mule-diag.el (unicodedata-file, unicode-data): Remove.
	They already exist in descr-text.el as `describe-char-unicodedata-file'
	and `describe-char-unicode-data'.
	(print-list): Simplify.
	(read-charset): Reflow docstring.
	(list-coding-systems): Doc fix.

2008-12-03  Glenn Morris  <rgm@gnu.org>

	* vc.el (vc-diff-switches): Doc fix.
	* vc-bzr.el (vc-bzr-diff-switches): Doc fix.  Add t as option.
	(vc-bzr-log-switches): Doc fix.
	* vc-cvs.el (vc-cvs-diff-switches): Doc fix.  Add t as option.
	* vc-git.el (vc-git-diff-switches): Doc fix.
	* vc-hg.el (vc-hg-diff-switches): Doc fix.
	* vc-mcvs.el (vc-mcvs-diff-switches): Doc fix.
	* vc-mtn.el (vc-mtn-diff-switches): Doc fix.
	* vc-rcs.el (vc-rcs-diff-switches): Doc fix.  Add t as option.
	* vc-sccs.el (vc-sccs-diff-switches): Doc fix.  Add t as option.

	* vc-arch.el (vc-arch-diff-switches): New option, for consistency with
	other backends.
	(vc-arch-diff): Apply switches.

	* vc-cvs.el (vc-cvs-diff): Use vc-diff-switches or diff-switches rather
	than appending.
