@@ -1,3 +1,12 @@
+2008-12-04  Juanma Barranquero  <lekktu@gmail.com>
+
+	* international/mule-diag.el (list-character-sets): Doc fix.
+	(list-character-sets-2): Fix info in header.  Simplify.
+	(print-coding-system): Simplify.
+	(list-input-methods-1): Simplify.
+	(mule-diag): Display current font/fontset for all window systems,
+	not just X.  Simplify.
+
 2008-12-04  Glenn Morris  <rgm@gnu.org>
 
 	* vc-cvs.el (vc-cvs-register-switches): Doc fix.  Add t as option.
